fix: redundent overflow rules

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,8 +41,6 @@ body {
 
 main {
   z-index: 1;
-  overflow-x: hidden;
-  overflow-y: auto;
 
   display: flex;
   flex-direction: column;
